--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -270,6 +270,9 @@
   flex-direction: column;
   gap: var(--spacing-lg);
 }
+.project-description .btn-secondary{
+  width : 50%;
+}
 
 /* Portfolio Section */
 .portfolio {
@@ -581,7 +584,9 @@
     gap: var(--spacing-2xl);
     text-align: center;
   }
-
+.project-description .btn-secondary{
+  width : 60%;
+}
   .hero-title {
     font-size: var(--font-size-3xl);
   }
