--- a/styles/products.css
+++ b/styles/products.css
@@ -186,6 +186,7 @@
     position: relative;
 }
 
+
 .step-number {
     position: absolute;
     top: -10px;
@@ -231,7 +232,7 @@
 .step-icon img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .step-content h3 {
