--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -30,7 +30,7 @@
   height: 100vh;
   max-width: 960px;
   margin: 0 auto;
-  padding: 0 1.5rem;
+  padding: 0 1rem;
   text-align: center;
   z-index: 2;
 }
@@ -39,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly ;
+  justify-content: center ;
 }
 
 .hero-title {
@@ -59,6 +59,15 @@
   font-size: 1rem;
   padding: 0.75rem 1.5rem;
 }
+
+.hero-content img {
+  max-width: 200px;
+  height: 200;
+  margin-bottom: 1.5rem;
+  object-fit: fill;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.4));
+}
+
 
 
 /* Services Section */
@@ -590,6 +599,10 @@
     gap: var(--spacing-2xl);
     text-align: center;
   }
+  .hero-content img {
+    margin-bottom: 1rem;
+  }
+}
 .project-description .btn-secondary{
   width : 60%;
 }
@@ -651,7 +664,7 @@
     height: 80px;
   }
 
-}
+
 /*anim carousel*/
 
 @keyframes scroll {
